@@ -1,5 +1,11 @@
 2008-11-28  Richard Hult  <richard@imendio.com>
 
+	* src/dh-util.[ch]: Add code to handle updating the font settings
+	for all open web views. Needs to be split out in its own file
+	later.
+
+2008-11-28  Richard Hult  <richard@imendio.com>
+
 	* src/dh-preferences.c: Remove the code that previously was used
 	to update the font settings in the HTML widget (now unused).
 
